# cc-private-2022

./: CMakeLists.txt  README.md  maker.sh
Assets/shaders/: mandelbrot.frag
Libraries/: CMakeLists.txt
Libraries/glad-raylib/src/: glad-part.c
Libraries/okna/include/: okna.hpp
Libraries/okna/src/: okna.cpp
Libraries/raygui/: CMakeLists.txt
Libraries/raylib-ext/include/: raylib-ext.hpp
Libraries/raylib-ext/src/: raylib-ext.cpp
Libraries/raylib-static/: CMakeLists.txt
Libraries/raylib-static/include/: raylib.h
Projects/ants-colony/: main.cpp
Projects/breakout/: CMakeLists.txt  main.cpp  okna.hpp
Projects/example-project/: CMakeLists.txt
Projects/game-of-life/: main.cpp
Projects/mandelbrot-set/: main.cpp
Projects/mandelbrot-shader/: main.cpp
Projects/raycaster/: CMakeLists.txt  main.cpp
Projects/raycaster_floor/: main.cpp
Projects/times-table/: main.cpp
